filtro de busqueda finalizado

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Iniciar Sesión</title>
     <link rel="stylesheet" href="/styles/index.css">
+    <link rel="shortcut icon" href="/assets/fondoNetflix.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/460146b1b8.js" crossorigin="anonymous"></script>
 </head>
 <body>
