--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
                 <button>Enviar</button>
             </div>
         </div>
-        <script src="/controller/login.js"></script>
+
+        <div class="toast">
+            <i class="fa-solid fa-triangle-exclamation fa-shake"></i>
+            <p class="p_toast"></p>
+        </div>
+        <script type="module" src="/controller/login.js"></script>
     </body>
 </html>
