log out, dark mode en base de datos, llamamos de la base de datos imagen de usuario, nombre y rol

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div class="container_ups">
             <div class="content_ups">
                 <span></span>
-                <input type="mail" placeholder="Ingresa tu correo">
-                <button>Enviar</button>
+                <input class="send_email" type="email" placeholder="Ingresa tu correo">
+                <button class="send_password">Enviar</button>
             </div>
         </div>
 
